[FIX] - Fixed Sonarqube